# N-Body-Simulation

./: .gitignore  COMMANDS.md  Cargo.toml  README.md  build.rs
benchmark/: benchmark.sh  benchmark_results.csv  benchmark_viz.html
report/: report_BODIN_Jules.aux  report_BODIN_Jules.fdb_latexmk  report_BODIN_Jules.fls  report_BODIN_Jules.out  report_BODIN_Jules.tex  report_BODIN_Jules.toc
src/: headless.rs  lib.rs  main.rs
src/body/: body.rs  mod.rs
src/cuda/: barnes_hut.cu  kernel.cu  mod.rs
src/geom/: mod.rs  vec2.rs  vec3.rs  vector.rs
src/kdtree/: kdcell.rs  kdtree.rs  mod.rs  node.rs  quad.rs  quadtree.rs  tree.rs
src/render/: renderer.rs
src/renderer/: app.rs  camera.rs  config.rs  instance.rs  mod.rs  renderer.rs  shader.wgsl  state.rs  vertex.rs
src/simul/: compute.rs  energy.rs  generate.rs  mod.rs  stats.rs
tests/: kdtree_tests.rs  vector_tests.rs
