[package]
name = "n-body-simulation"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
rand = "0.8"
rand_distr = "0.4"
anyhow = "1.0"
winit = "0.30"
env_logger = "0.10"
log = "0.4"
wgpu = "27.0.0"
pollster = "0.3"
bytemuck = { version = "1.24", features = [ "derive" ] }
cgmath = "0.18"

[build-dependencies]
cc = "1.0"
