[package]
name = "n-body-simulation"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
name = "n_body_simulation"
path = "src/lib.rs"

[[bin]]
name = "n-body-simulation"
path = "src/main.rs"

[features]
default = ["vec2"]
vec2 = []
vec3 = []
cuda = []

[dependencies]
fastrand = "2.1.1"
rand = "0.8"
rand_distr = "0.4"
anyhow = "1.0"
winit = "0.30"
env_logger = "0.10"
log = "0.4"
wgpu = "27.0.0"
pollster = "0.3"
bytemuck = { version = "1.24", features = [ "derive" ] }
cgmath = "0.18"
clap = { version = "4.5", features = ["derive"] }

[build-dependencies]
cc = "1.0"
